# fastero

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  not_using_global.py  pyproject.toml  requirements-docs.txt  requirements.txt  schema.json  setup.cfg  test_global_fix.py  using_global.py
docs/: .readthedocs.yaml  foo.json
docs/source/: asciidoc_lexer.py  conf.py  csv_lexer.py  genindex.rst  glossary.rst  index.rst  lexer_examples.rst  shell_lexer.py
docs/source/_build/doctrees/: environment.pickle  genindex.doctree  glossary.doctree  index.doctree
docs/source/_build/doctrees/development/: contributing.doctree  index.doctree  internal_structure.doctree  license.doctree  workflows.doctree
docs/source/_build/doctrees/documentation/: cli_reference.doctree  cli_reference_automated.doctree  exporting.doctree  index.doctree  quickstart.doctree  tips_recipies_and_notes.doctree
docs/source/_build/html/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/html/_sources/: glossary.rst.txt
docs/source/_build/html/_sources/development/: contributing.rst.txt  internal_structure.rst.txt  license.rst.txt
docs/source/_build/html/_sources/documentation/: cli_reference.rst.txt  cli_reference_automated.rst.txt  exporting.rst.txt  quickstart.rst.txt
docs/source/_build/html/_static/: custom.css  documentation_options.js
docs/source/_build/html/development/: contributing.html  index.html  internal_structure.html  license.html  workflows.html
docs/source/_build/html/documentation/: cli_reference.html  cli_reference_automated.html  exporting.html  index.html  quickstart.html  tips_recipies_and_notes.html
docs/source/_static/: custom.css
docs/source/development/: contributing.rst  index.rst  internal_structure.rst  license.rst  workflows.rst
docs/source/documentation/: cli_reference.rst  cli_reference_automated.rst  exporting.rst  index.rst  quickstart.rst  tips_recipies_and_notes.rst
examples/: README.md  python_diff_between_two_lists_benchmark.ps1  python_diff_between_two_lists_benchmark.sh  python_get_list_element.ps1  python_get_list_element.sh  python_http_library_benchmark.ps1  python_http_library_benchmark.sh  python_http_library_benchmark_input.json  python_itertools_repeat_benchmark.ps1  python_itertools_repeat_benchmark.sh
examples/export/: python_http_library_benchmark.adoc  python_http_library_benchmark.csv  python_http_library_benchmark.json  python_http_library_benchmark.md  python_http_library_benchmark.yaml
fastero/: __init__.py  __main__.py  core.py  exporter.py  utils.py
