[tool.poetry]
name = "fastero"
version = "0.2.3"
description = "Python timeit CLI for the 21st century."
authors = ["Wasi Master <arianmollik323@gmail.com>"]
license = "MIT"
keywords = ["timeit", "fastero", "hyperfine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Terminals",
]
homepage = "https://fastero.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
rich = "12.2.0"
click = "8.1.2"
rich-click = "1.3.0"
prompt_toolkit = "3.0.29"
ptpython = "3.0.20"
matplotlib = { optional = true, version = "*" }
numpy = { optional = true, version = "*" }
pillow = { optional = true, version = "*" }
pyyaml = { optional = true, version = "*" }
selenium = { optional = true, version = "*" }

[tool.poetry.extras]
export = ["matplotlib", "numpy", "pillow", "pyyaml", "selenium"]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
