[metadata]
name = fastero
version = attr: fastero.__version__
description = Python timeit CLI for the 21st century.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wasi-master.github.io/fastero/
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    timeit
project_urls =
    Bug Tracker = https://github.com/wasi-master/fastero/issues
    Source = https://github.com/wasi-master/fastero
    Documentation = https://wasi-master.github.io/fastero
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    fastero
install_requires =
    rich==12.2.0
    click==8.1.2
    rich-click==1.3.0
    prompt_toolkit==3.0.29
python_requires = >=3.7

[options.entry_points]
console_scripts =
    fastero=fastero.__main__:app

[options.extras_require]
export =
    # Bar Plot
    matplotlib
    numpy
    # YAML
    pyyaml
    # Images
    selenium
    Pillow

[pylama]
linters = pycodestyle,pydocstyle,eradicate
ignore = W605,W1401,E203,D212,D207,D203,D413

[pylama:pycodestyle]
max_line_length = 120

[pylama:pylint]
max_line_length = 120
